# rlopt

./: CMakeLists.txt
.beads/: issues.jsonl
swiftsim/: .gitignore  CMakeLists.txt  benchmark_soa.cpp  pyproject.toml  test_complete.cpp  test_physics.cpp
swiftsim/core/: quadrotor_physics.hpp  quadrotor_physics_complete.hpp  swarm_physics_soa.hpp
swiftsim/cuda/: CMakeLists.txt  benchmark_cuda.cu  build_cuda.bat  build_raylib_demo.bat  main_cuda.cpp  physics_wrapper.cu  physics_wrapper.cuh  ppo_agent.hpp  raylib_main.cpp  swarm_physics_cuda.cu  swarm_physics_cuda.cuh
swiftsim/python/: __init__.py  demo.py  realtime_demo.py  swiftsim_bindings.cpp  swiftsim_env.py  visualizer.py
swiftsim/ui/: visualizer_raylib.hpp
